@@ -80,7 +80,7 @@ they occurred between. For more detailed information see the
 
 @item Merged changes from sawfish-pager [Christopher Bratusek]
 
-@item Major update of the spec file [Christopher Bratusek]
+@item Major update of the spec file [Christopher Bratusek] [Michal Jaegermann]
 @end itemize
 @end itemize
 
