@@ -16,7 +16,10 @@
 			   - package sawfish.desktop
 			   - package sawfish-wm.desktop
 			   - package sawfish.pc
+			   - package README.IMPORTANT
 			   - let configure create librep/rep-gtk minimum requirement
+			   - use _tmppath instead of /var/tmp
+			   - merge changes from Michal Jaegermann's spec-file
 
 2009-01-17  Christopher Bratusek <zanghar@freenet.de>
 	* OPTIONS: fixed a typo
